WineApp-Deploy-K8s/wineapp-k8s.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wineapp

---
# 1. Mongo Service
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: wineapp
  labels:
    app: wineapp-mongo
spec:
  type: ClusterIP
  selector:
    app: wineapp-mongo
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
      name: mongodb
    - protocol: TCP
      port: 9216
      targetPort: 9216
      name: metrics

---
# 2. Mongo Deployment & Exporter Sidecar
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wineapp-mongo
  namespace: wineapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wineapp-mongo
  template:
    metadata:
      labels:
        app: wineapp-mongo
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9216"
    spec:
      containers:
      - name: mongo
        image: mongo:4.2.0
        volumeMounts:
        - name: mongo-storage
          mountPath: /data/db
      - name: mongo-exporter
        image: percona/mongodb_exporter:0.39.0
        args:
        - --mongodb.uri=mongodb://127.0.0.1:27017
        - --collect-all
        - --compatible-mode
        ports:
        - containerPort: 9216
      volumes:
      - name: mongo-storage
        emptyDir: {}

---
# 4. Backend Service
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: wineapp
  labels:
    app: wineapp-backend
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "4000"
spec:
  type: ClusterIP
  selector:
    app: wineapp-backend
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
      name: metrics

---
# 5. Backend Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wineapp-backend
  namespace: wineapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: wineapp-backend
  template:
    metadata:
      labels:
        app: wineapp-backend
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "4000"
    spec:
      imagePullSecrets:
      - name: docker-private-registry
      containers:
      - name: backend
        image: registry.awsfcaj.com/wineapp/wineapp-backend:latest
        resources:
          requests:
            memory: "256Mi"
          limits:
            memory: "512Mi"
        ports:
        - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: wineapp
  labels:
    app: wineapp-frontend
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "9113"
spec:
  type: ClusterIP
  selector:
    app: wineapp-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: http
    - protocol: TCP
      port: 9113
      targetPort: 9113
      name: metrics

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wineapp-frontend
  namespace: wineapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: wineapp-frontend
  template:
    metadata:
      labels:
        app: wineapp-frontend
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "80"
    spec:
      imagePullSecrets:
      - name: docker-private-registry
      containers:
      - name: frontend
        image: registry.awsfcaj.com/wineapp/wineapp-frontend:latest
        resources:
          requests:
            memory: "256Mi"
          limits:
            memory: "512Mi"
        ports:
        - containerPort: 80
      - name: nginx-exporter
        image: nginx/nginx-prometheus-exporter:latest
        args:
          - "-nginx.scrape-uri=http://localhost:8080/stub_status"
        ports:
        - containerPort: 9113

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wineapp-ingress
  namespace: wineapp
spec:
  ingressClassName: nginx 
  rules:
  - host: wineapp.tranvix.click
    http:
      paths:
      - pathType: Prefix
        path: "/api/"
        backend:
          service:
            name: backend
            port:
              number: 4000
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: frontend
            port:
              number: 80
